@@ -39,6 +39,9 @@ RELEASE X.X.X - XXX
       for the Microsoft linker, the OS/2 ilink linker and the Phar Lap
       linkloc linker.
 
+    - Spell the Windows environment variables consistently "SystemDrive"
+      and "SystemRoot" instead of "SYSTEMDRIVE" and "SYSTEMROOT".
+
   From Robert P. J. Day:
 
     - User's Guide updates.
